# barto

./: .gitignore  CLAUDE.md  Cargo.toml  Cross.toml  README.md  Rakefile.toml  SECRETS.md
.cargo/: audit.toml
.github/: codecov.yml  copilot-instructions.md
.github/agents/: commit-message.agent.md
.github/workflows/: audit.yml  barto.yml  release.yml
.sqlx/: query-04aef07c3954ca5068a23c7bda4b386079406056ab97dcb90c8e2d4867450e24.json  query-0580446df2b0aad58b97255bfe2d73b9acaceaabd652c36276a6e4cd2ee1688c.json  query-0ef0477bed31b125ea0c97a117df24e1ef9b0e57a74b5a62a2a7ecff1205e7ae.json  query-0ef85238635005b259fe7588c122e3d15f8c54140ba531df869df58339a03aa1.json  query-126c88b0552e0355cac380e7ffa45028dad12e27907fb06064088ace38e80e91.json  query-1ffe42d060051762c4ba58b2dcc60b805ef478d9461f273d8c3760ac168fce21.json  query-20ac28592b1c9053f303d7ad530fb9360f18241c0210cd66e3beb56bb9476bf1.json  query-2f0aee2e139b0b6ecdef7ed836bb40cc2ba8d0a67e68e861dc1ca2deb659148b.json  query-43987655a655a83b801d2dce7bdea3fb94a9a4a7b10c1dc7286f1963367e7112.json  query-456fddc4d912643d7cbdcbb055a684072d2fd8eff02988db56385b554cb7101d.json  query-4d34283d3fc5b452af3808fb906e20ce7f4639b024e7aaf631d4c62178e49b0f.json  query-530cd7ad2b0211382401ccc2b726f1b89c29a709ba1bf6c012aba05ef59e1c5d.json  query-537d0e35eb31e2e7cd095899652288daefccd79af59231910e32fa90530f9448.json  query-5535e75fc2509fa704d28c5107303c3d0a93bf21bc26c3914e4ad04c6ba92c65.json  query-5dae44dca99d898761f53c98f011621da358a02b7d1a3def3aa15d8cd0234682.json  query-6effad1e54a4293fe86505d29176096cb5a6c03af6e10e19c7e75de106aca4ad.json  query-76902844c1f0d3002b2cad20ea13f9e7268f690b01da6d682a5b84ed3cfa4e76.json  query-773c506a5efecfdba9fdfceb6debcfd94a7184dab82d6b6938ca7e71286dce49.json  query-7c1122b818d281e3c21590dbca7ecb295ed78fc66341c2d7f1eb9d9d4a7a7c4c.json  query-812e5a59329b6f1b9ac65f7aa2f9b547668836a7e9d0346b54378b49770a8e17.json  query-9051c567984bffa9a8e4278ab8f8963c361f0c415f006c6558569d3ff80a8c79.json  query-96d7f190044a0e1372ab0c71d795af9da849cdff0c80eb3e132bee7bb3710c65.json  query-9bb06462325151babe6b639c23f8bb3349d7ea31b59cb54ae0806b775a2d8003.json  query-b227055d7021c9c3e014e0c51e33a1039cc85e569434ebaa4102d960744db8e3.json  query-b395dad15562b5758002a8d8fd5b0a28a6ef4ce1e12957ee0be56c87b89fe387.json  query-ba10178291fa19f9255053d2e80cfe788df99505b4b083dfe8bde42129dbd90c.json  query-be0d606bbb082fbc44b2ecc9a74ee0c2ab42d2ab88cac8f6c60092957b180591.json  query-c0ff69f227fbe1979a0e4b7e83cbfa1f00cc1a1707216afb6e9992e03f8a537a.json  query-cc04c9afa85bf6f48f045462f0a66a9a151b801dd119d00f301e8ddc28bff54a.json  query-d15dc6b1c3583b6449fcefc1b443048cc924d464eb6b7ac9163cf4ac6b61ad7a.json  query-e19e4d7485c283962f646745d8aa5392fc11c8612019545aad8e82935f92fe2e.json  query-f81d2f2d84851ebfe286f1c289f6835b0a59a7b83a17b25805fe15bf9a0c010c.json  query-f9d6655a5748659c5417c15ef1eea0fe32c70dea610548378522bdbd269ce6f0.json  query-fb0a8a6ee6ef424475aa774c75c32291dcfcce1fd95b9a1e28c9f5724e672c39.json  query-fcd276185db44be2818f15894104b42d11e7a7bc6171b64b1aa5b3fdee440b85.json  query-fe9aaa602ba1c6d3da67549838b8d0bbf89fda668decb202e296389c7f19be84.json
barto/: Cargo.toml
barto-cli/: Cargo.toml
barto-cli/src/: error.rs  main.rs  utils.rs
barto-cli/src/config/: mod.rs
barto-cli/src/handler/: mod.rs
barto-cli/src/runtime/: cli.rs  mod.rs  secrets.rs
barto/src/: error.rs  main.rs
barto/src/config/: mod.rs
barto/src/message/: mod.rs
barto/src/runtime/: mod.rs
barto/src/screen/: main.rs  mod.rs
barto/src/state/: mod.rs
bartoc/: Cargo.toml  build.rs
bartoc/src/: error.rs  main.rs  service.rs
bartoc/src/actor/: heartbeat.rs  mod.rs
bartoc/src/config/: mod.rs
bartoc/src/db/: mod.rs
bartoc/src/db/data/: bincode.rs  mod.rs  odt.rs  output.rs  status.rs  uuid.rs
bartoc/src/handler/: mod.rs  stream.rs
bartoc/src/runtime/: cli.rs  mod.rs
bartoc/wix/: main.wxs
bartos/: Cargo.toml  build.rs
bartos/src/: error.rs  main.rs
bartos/src/common/: mod.rs
bartos/src/config/: mod.rs
bartos/src/db/: mod.rs  mysql.rs  utils.rs
bartos/src/endpoints/: mod.rs
bartos/src/endpoints/insecure/: cli.rs  mod.rs  worker.rs
bartos/src/handler/: cli.rs  mod.rs
bartos/src/runtime/: cli.rs  mod.rs
libbarto/: Cargo.toml  build.rs
libbarto/proptest-regressions/realtime/: dow.txt  mod.txt
libbarto/proptest-regressions/realtime/hms/: hour.txt  minute.txt
libbarto/proptest-regressions/realtime/ymd/: mod.txt  month.txt  year.txt
libbarto/proptest-regressions/schedule/: dow.txt
libbarto/proptest-regressions/schedule/hms/: hour.txt  minute.txt
libbarto/proptest-regressions/schedule/ymd/: day.txt  month.txt  year.txt
libbarto/src/: config.rs  error.rs  header.rs  hmac_auth.rs  lib.rs  signing.rs  tls.rs  tracing.rs  utils.rs
libbarto/src/db/: bincode.rs  mod.rs
libbarto/src/message/: cli.rs  client.rs  mod.rs  server.rs
libbarto/src/message/shared/: failed.rs  init.rs  list.rs  mod.rs  odt.rs  output.rs  query.rs  sys.rs  update.rs  uuid.rs
libbarto/src/realtime/: cv.rs  dow.rs  mod.rs
libbarto/src/realtime/hms/: hour.rs  minute.rs  mod.rs  second.rs
libbarto/src/realtime/ymd/: day.rs  mod.rs  month.rs  year.rs
libbarto/src/schedule/: dow.rs  hms.rs  mod.rs  ymd.rs
libbarto/src/schedule/hms/: hour.rs  minute.rs  mod.rs  second.rs
libbarto/src/schedule/ymd/: day.rs  mod.rs  month.rs  year.rs
libbarto/testtls/: onlytests-key.pem  onlytests.pem  test-ca.pem  test-client.key  test-client.pem
migrations/: 20251006174359_barto.down.sql  20251006174359_barto.up.sql  20251009152214_output_status_test.up.sql
packaging/homebrew/: barto-cli.rb.tmpl  bartoc.rb.tmpl
packaging/nfpm/: barto-cli-aarch64.yaml  barto-cli.yaml  bartoc-aarch64.yaml  bartoc.yaml  bartos-aarch64.yaml  bartos.yaml
packaging/scripts/: barto-cli-launcher-macos.sh  barto-cli-launcher.ps1  bartoc-launcher-macos.sh  bartoc-launcher.ps1
packaging/wix/: README.Windows.md
scripts/: run_all.fish  run_all.ps1  run_install.fish  run_install.ps1  run_musl.fish  run_musl.ps1
xtask/: Cargo.toml
xtask/src/: main.rs
(+34 files in other folders)
