[workspace]
resolver = "3"

members = ["barto-cli", "bartoc", "bartos", "libbarto"]

[workspace.dependencies]
actix-web = "4.13.0"
anyhow = "1.0.102"
bincode-next = { version = "3.0.0-rc.13", features = ["serde", "derive"] }
bon = "3.9.1"
bytes = "1.11.1"
clap = { version = "4.6.1", features = ["derive"] }
config = { version = "0.15.22", features = ["toml"] }
dirs2 = "3.0.1"
futures-util = { version = "0.3.32", default-features = false, features = [
  "std",
] }
getset = "0.1.6"
redb = "4.0.0"
rustls = { version = "0.23.38", default-features = false, features = ["std", "tls12", "ring"] }
rustversion = "1.0.22"
serde = { version = "1.0.228", features = ["derive"] }
sqlx = { version = "0.8.6", features = [
  "mysql",
  "runtime-tokio",
  "time",
  "tls-rustls-ring",
  "uuid",
] }
sysinfo = { version = "0.38.4", features = ["serde", "windows"] }
thiserror = "2.0.18"
time = "0.3.47"
tokio = { version = "1.52.1", features = ["macros", "rt-multi-thread"] }
tokio-tungstenite = { version = "0.29.0", features = [
  "__rustls-tls",
] }
tokio-util = "0.7.18"
tracing = { version = "0.1.44", features = [
  "max_level_trace",
  "release_max_level_trace",
] }
tracing-subscriber-init = { version = "0.2.6", features = ["tstime"] }
uuid = { version = "1.23.1", features = ["v4"] }
vergen-gix = { version = "10.0.0-beta.6", features = [
  "build",
  "cargo",
  "rustc",
  "si",
] }
vergen-pretty = { version = "10.0.0-beta.6", features = ["serde"] }
webpki-roots = "1.0.7"
