[workspace]
resolver = "3"

members = ["barto-cli", "bartoc", "bartos", "libbarto", "xtask"]

[workspace.dependencies]
actix-web = "4.13.0"
anyhow = "1.0.102"
base64 = "0.22.1"
bincode-next = { version = "3.0.0-rc.15", features = ["serde", "derive"] }
bon = "3.9.1"
bytes = "1.11.1"
clap = { version = "4.6.1", features = ["derive"] }
config = { version = "0.15.23", features = ["toml"] }
dirs2 = "3.0.1"
ed25519-dalek = { version = "3.0.0-rc.0", features = ["serde"] }
futures-util = { version = "0.3.32", default-features = false, features = [
  "std",
] }
notify-debouncer-mini = { version = "0.7", default-features = false }
getset = "0.1.6"
hmac = "0.13.0"
redb = "4.1.0"
rpassword = "7"
rustls = { version = "0.23.40", default-features = false, features = [
  "std",
  "tls12",
  "ring",
] }
rustversion = "1.0.22"
serde = { version = "1.0.228", features = ["derive"] }
sha2 = "0.11.0"
sqlx = { version = "0.9.0", features = [
  "mysql",
  "runtime-tokio",
  "time",
  "tls-rustls-ring",
  "uuid",
] }
subtle = "2.6.1"
sysinfo = { version = "0.39.3", features = ["serde"] }
thiserror = "2.0.18"
time = "0.3.47"
tokio = { version = "1.52.3", features = ["macros", "rt-multi-thread"] }
tokio-tungstenite = { version = "0.29.0", features = ["__rustls-tls"] }
tokio-util = "0.7.18"
tracing = { version = "0.1.44", features = [
  "max_level_trace",
  "release_max_level_trace",
] }
tracing-subscriber-init = { version = "0.2.6", features = ["tstime"] }
uuid = { version = "1.23.3", features = ["v4"] }
vergen-gix = { version = "10.0.0", features = [
  "build",
  "cargo",
  "rustc",
  "si",
] }
vergen-pretty = { version = "10.0.0", features = ["serde"] }
webpki-roots = "1.0.7"
keyring-core = "1.0.0"
windows-native-keyring-store = "1.1.0"
windows-service = "0.8.1"
