[workspace]
resolver = "3"

members = ["barto-cli", "bartoc", "bartos", "libbarto", "xtask"]

[workspace.dependencies]
actix-web = "4.13.0"
anyhow = "1.0.103"
base64 = "0.22.1"
bincode-next = { version = "3.1.1", features = ["serde", "derive"] }
bon = "3.9.3"
bytes = "1.12.1"
clap = { version = "4.6.1", features = ["derive"] }
config = { version = "0.15.25", features = ["toml"] }
dirs2 = "3.0.1"
ed25519-dalek = { version = "3.0.0", features = ["serde"] }
futures-util = { version = "0.3.32", default-features = false, features = [
  "std",
] }
notify-debouncer-mini = { version = "0.7.0", default-features = false }
getset = "0.1.7"
hmac = "0.13.0"
redb = "4.1.0"
regex = "1.12.4"
rpassword = "7.5.4"
rustls = { version = "0.23.40", default-features = false, features = [
  "std",
  "tls12",
  "ring",
] }
rustversion = "1.0.23"
serde = { version = "1.0.228", features = ["derive"] }
sha2 = "0.11.0"
sqlx = { version = "0.9.0", features = [
  "mysql",
  "runtime-tokio",
  "time",
  "tls-rustls-ring",
  "uuid",
] }
subtle = "2.6.1"
sysinfo = { version = "0.39.5", features = ["serde"] }
thiserror = "2.0.18"
time = "0.3.53"
tokio = { version = "1.52.3", features = ["macros", "rt-multi-thread"] }
tokio-tungstenite = { version = "0.29.0", features = ["__rustls-tls"] }
tokio-util = "0.7.18"
tracing = { version = "0.1.44", features = [
  "max_level_trace",
  "release_max_level_trace",
] }
tracing-subscriber-init = { version = "0.2.6", features = ["tstime"] }
uuid = { version = "1.23.4", features = ["v4"] }
vergen-gix = { version = "10.0.1", features = [
  "build",
  "cargo",
  "rustc",
  "si",
] }
vergen-pretty = { version = "10.0.1", features = ["serde"] }
webpki-roots = "1.0.8"
keyring-core = "1.0.0"
windows-native-keyring-store = "1.1.0"
windows-service = "0.8.1"
