[package]
authors = ["Jason Ozias <jason.g.ozias@gmail.com>"]
categories = ["web-programming::websocket", "web-programming"]
description = "Websocket based job scheduling system"
documentation = "https://docs.rs/libbarto"
edition = "2024"
homepage = "https://github.com/rustyhorde/barto"
keywords = ["job", "scheduling", "websocket", "actix"]
license = "MIT OR Apache-2.0"
name = "barto-cli"
readme = "../README.md"
repository = "https://github.com/rustyhorde/barto"
version = "0.2.0"
rust-version = "1.89.0"

[features]
unstable = []

[dependencies]
anyhow = { workspace = true }
bincode = { workspace = true }
bon = { workspace = true }
clap = { workspace = true }
config = { workspace = true }
console = "0.16.1"
futures-util = { workspace = true }
getset = { workspace = true }
libbarto = { version = "0.2.0", path = "../libbarto" }
serde = { workspace = true }
thiserror = { workspace = true }
tokio = { workspace = true, features = ["macros", "process", "signal", "sync", "time"] }
tokio-tungstenite = { workspace = true }
tracing = { workspace = true }
tracing-subscriber-init = { workspace = true }
vergen-pretty = { workspace = true }

[build-dependencies]
rustversion = { workspace = true }

[lints.rust]
unexpected_cfgs = { level = "warn", check-cfg = [
    'cfg(coverage,coverage_nightly)',
] }

[package.metadata.docs.rs]
all-features = true
rustdoc-args = ["--cfg", "docsrs"]