[package]
authors = ["Jason Ozias <jason.g.ozias@gmail.com>"]
categories = ["web-programming::websocket", "web-programming"]
description = "A command line tool for requesting information from a bartos instance"
documentation = "https://docs.rs/libbarto"
edition = "2024"
homepage = "https://github.com/rustyhorde/barto"
keywords = ["job", "scheduling", "websocket", "actix"]
license = "MIT OR Apache-2.0"
name = "barto-cli"
readme = "../README.md"
repository = "https://github.com/rustyhorde/barto"
version = "1.5.9"
rust-version = "1.95.0"

[features]
unstable = []

[dependencies]
anyhow = { workspace = true }
bincode-next = { workspace = true }
bon = { workspace = true }
clap = { workspace = true }
config = { workspace = true }
console = "0.16.3"
count-digits = "0.5.1"
futures-util = { workspace = true }
getset = { workspace = true }
keyring-core = "1.0.0"
libbarto = { version = "1.5.9", path = "../libbarto" }
rpassword = { workspace = true }
rustls = { workspace = true }
serde = { workspace = true }
thiserror = { workspace = true }
tokio = { workspace = true, features = [
    "macros",
    "process",
    "signal",
    "sync",
    "time",
] }
tokio-tungstenite = { workspace = true }
tracing = { workspace = true }
tracing-subscriber-init = { workspace = true }
vergen-pretty = { workspace = true }
webpki-roots = { workspace = true }

[target.'cfg(target_os = "linux")'.dependencies]
zbus-secret-service-keyring-store = { version = "1.0.0", features = ["crypto-rust"] }

[target.'cfg(target_os = "macos")'.dependencies]
apple-native-keyring-store = { version = "1.0.0", features = ["keychain", "protected"] }

[target.'cfg(target_os = "windows")'.dependencies]
windows-native-keyring-store = "1.1.0"

[build-dependencies]
anyhow = { workspace = true }
rustversion = { workspace = true }
vergen-gix = { workspace = true }
