[package]
name = "barto"
version = "0.1.0"
edition = "2024"

[features]
unstable = []

[dependencies]
anyhow = { workspace = true }
bon = { workspace = true }
clap = { workspace = true }
config = { workspace = true }
getset = { workspace = true }
iced = { version = "0.13.1", features = ["tokio"] }
iced_aw = "0.12.2"
iced_fonts = { version = "0.2.1", features = ["full"] }
libbarto = { version = "0.5.0", path = "../libbarto" }
serde = { workspace = true }
sqlx = { workspace = true, features = ["uuid"] }
thiserror.workspace = true
tracing = { workspace = true }
tracing-subscriber-init = { workspace = true }
uuid = { workspace = true, features = ["v4"] }

[build-dependencies]
anyhow = { workspace = true }
rustversion = { workspace = true }
vergen-gix = { workspace = true }

[lints.rust]
unexpected_cfgs = { level = "warn", check-cfg = [
    'cfg(coverage,coverage_nightly)',
] }

[package.metadata.docs.rs]
all-features = true
rustdoc-args = ["--cfg", "docsrs"]