[package]
authors = ["Jason Ozias <jason.g.ozias@gmail.com>"]
categories = ["web-programming::websocket", "web-programming"]
description = "An iced based GUI for displaying information from the bartos database"
documentation = "https://docs.rs/libbarto"
edition = "2024"
homepage = "https://github.com/rustyhorde/barto"
keywords = ["job", "scheduling", "websocket", "actix"]
license = "MIT OR Apache-2.0"
name = "barto"
readme = "../README.md"
repository = "https://github.com/rustyhorde/barto"
version = "0.6.0"
rust-version = "1.89.0"

[features]
unstable = []

[dependencies]
anyhow = { workspace = true }
bon = { workspace = true }
clap = { workspace = true }
config = { workspace = true }
getset = { workspace = true }
iced = { version = "0.13.1", features = ["tokio"] }
iced_aw = "0.12.2"
iced_fonts = { version = "0.2.1", features = ["full"] }
libbarto = { version = "0.6.0", path = "../libbarto" }
serde = { workspace = true }
sqlx = { workspace = true, features = ["uuid"] }
thiserror.workspace = true
tracing = { workspace = true }
tracing-subscriber-init = { workspace = true }
uuid = { workspace = true, features = ["v4"] }

[build-dependencies]
anyhow = { workspace = true }
rustversion = { workspace = true }
vergen-gix = { workspace = true }

[lints.rust]
unexpected_cfgs = { level = "warn", check-cfg = [
    'cfg(coverage,coverage_nightly)',
] }

[package.metadata.docs.rs]
all-features = true
rustdoc-args = ["--cfg", "docsrs"]