[package]
name = "bartoc"
version = "0.1.0"
edition = "2024"

[features]
unstable = []

[dependencies]
actix-web = { workspace = true }
anyhow = { workspace = true }
awc = { version = "3.8.0", features = ["rustls-0_23-webpki-roots"] }
clap = { workspace = true }
config = { workspace = true }
futures-util = { workspace = true }
getset = { workspace = true }
libbarto = { path = "../libbarto" }
serde = { workspace = true }
thiserror = { workspace = true }
tracing = { workspace = true }
tracing-subscriber-init = { workspace = true }

[build-dependencies]
rustversion = { workspace = true }

[lints.rust]
unexpected_cfgs = { level = "warn", check-cfg = ['cfg(coverage,coverage_nightly)'] }

[package.metadata.docs.rs]
all-features = true
rustdoc-args = ["--cfg", "docsrs"]
