[package]
name = "bartoc"
version = "0.1.0"
edition = "2024"

[features]
unstable = []

[dependencies]
anyhow = { workspace = true }
bincode = { workspace = true }
bon = "3.7.2"
# bytes = { workspace = true }
clap = { workspace = true }
config = { workspace = true }
futures-util = { workspace = true }
getset = { workspace = true }
libbarto = { path = "../libbarto" }
serde = { workspace = true }
thiserror = { workspace = true }
tokio = { workspace = true, features = ["signal", "sync", "time"] }
tokio-tungstenite = { workspace = true }
tokio-util = "0.7.16"
tracing = { workspace = true }
tracing-subscriber-init = { workspace = true }

[build-dependencies]
rustversion = { workspace = true }

[lints.rust]
unexpected_cfgs = { level = "warn", check-cfg = [
    'cfg(coverage,coverage_nightly)',
] }

[package.metadata.docs.rs]
all-features = true
rustdoc-args = ["--cfg", "docsrs"]
