[package]
authors = ["Jason Ozias <jason.g.ozias@gmail.com>"]
categories = ["web-programming::websocket", "web-programming"]
description = "A bartos server records information from bartoc instances and serves as a central hub for job scheduling"
documentation = "https://docs.rs/libbarto"
edition = "2024"
homepage = "https://github.com/rustyhorde/barto"
keywords = ["job", "scheduling", "websocket", "actix"]
license = "MIT OR Apache-2.0"
name = "bartos"
readme = "../README.md"
repository = "https://github.com/rustyhorde/barto"
version = "1.0.3"
rust-version = "1.95.0"

[features]
unstable = ["libbarto/unstable"]

[dependencies]
actix-web = { workspace = true, features = ["rustls-0_23"] }
actix-ws = "0.4.0"
anyhow = { workspace = true }
bincode-next = { workspace = true }
bon = { workspace = true }
clap = { workspace = true }
config = { workspace = true }
futures-util = { workspace = true }
getset = { workspace = true }
libbarto = { version = "1.0.3", path = "../libbarto" }
regex = "1.12.3"
rustls = { workspace = true }
serde = { workspace = true }
serde_json = "1.0.150"
sqlx = { workspace = true, features = [ "uuid" ] }
thiserror = { workspace = true }
time = { workspace = true, features = ["local-offset", "macros"] }
tokio = { workspace = true }
tokio-util = { workspace = true }
tracing = { workspace = true }
tracing-subscriber-init = { workspace = true }
uuid = { workspace = true }
vergen-pretty = { workspace = true }

[build-dependencies]
anyhow = { workspace = true }
rustversion = { workspace = true }
vergen-gix = { workspace = true }
