[package]
authors = ["Jason Ozias <jason.g.ozias@gmail.com>"]
categories = ["web-programming::websocket", "web-programming"]
description = "A websocket based job scheduling system library for bartos, bartoc, barto-cli"
documentation = "https://docs.rs/libbarto"
edition = "2024"
homepage = "https://github.com/rustyhorde/barto"
keywords = ["job", "scheduling", "websocket", "actix"]
license = "MIT OR Apache-2.0"
name = "libbarto"
readme = "../README.md"
repository = "https://github.com/rustyhorde/barto"
version = "1.0.0"
rust-version = "1.91.1"

[features]
unstable = []

[dependencies]
anyhow = { workspace = true }
bincode-next = { workspace = true }
bon = { workspace = true }
bytes = { workspace = true }
clap = { workspace = true }
config = { workspace = true }
console = "0.16.3"
dirs2 = { workspace = true }
getset = { workspace = true }
num-traits = "0.2.19"
rand = "0.10.1"
redb = { workspace = true }
regex = "1.12.3"
rustls = { workspace = true }
serde = { workspace = true }
strip-ansi-escapes = "0.2.1"
sysinfo = { workspace = true }
thiserror = { workspace = true }
time = { workspace = true, features = [
    "formatting",
    "macros",
    "serde",
    "serde-human-readable",
] }
tracing = { workspace = true }
tracing-appender = "0.2.4"
tracing-subscriber = { version = "0.3.23", features = ["env-filter", "fmt", "time"] }
tracing-subscriber-init = { workspace = true }
unicode-width = "0.2.2"
uuid = { workspace = true }
vergen-pretty = { workspace = true, features = [ "color", "header", "trace" ]}

[build-dependencies]
anyhow = { workspace = true }
rustversion = { workspace = true }
vergen-gix = { workspace = true }

[lints.rust]
unexpected_cfgs = { level = "warn", check-cfg = ['cfg(coverage,coverage_nightly)'] }

[dev-dependencies]
proptest = "1.11.0"
rand = "0.10.1"
tempfile = "3.27.0"

[package.metadata.docs.rs]
all-features = true
rustdoc-args = ["--cfg", "docsrs"]
