# Copyright (c) 2025 barto developers
#
# Licensed under the Apache License, Version 2.0
# <LICENSE-APACHE or https://www.apache.org/licenses/LICENSE-2.0> or the MIT
# license <LICENSE-MIT or https://opensource.org/licenses/MIT>, at your
# option. All files in the project carrying such notice may not be copied,
# modified, or distributed except according to those terms.

[package]
name = "xtask"
version = "0.1.0"
edition = "2021"
publish = false

[dependencies]
anyhow = { workspace = true }
clap = { workspace = true }
clap_complete = "4.5"
clap_mangen = "0.2"
