# Copyright (c) 2025 barto developers
#
# Licensed under the Apache License, Version 2.0
# <LICENSE-APACHE or https://www.apache.org/licenses/LICENSE-2.0> or the MIT
# license <LICENSE-MIT or https://opensource.org/licenses/MIT>, at your
# option. All files in the project carrying such notice may not be copied,
# modified, or distributed except according to those terms.

[package]
authors = ["Jason Ozias <jason.g.ozias@gmail.com>"]
edition = "2024"
license = "MIT OR Apache-2.0"
name = "xtask"
repository = "https://github.com/rustyhorde/barto"
version = "1.4.7"
rust-version = "1.95.0"

[dependencies]
anyhow = { workspace = true }
clap = { workspace = true }
clap_complete = "4.6.5"
clap_mangen = "0.3.0"
